--- a/package.json
+++ b/package.json
@@ -1,14 +1,38 @@
 {
   "name": "tnt-vec2",
   "version": "0.0.3",
-  "description": "A simple ES6 vector2 class",
-  "main": "Vector2.js",
+  "description": "A simple vector2 object",
+  "main": "./dist/index.js",
   "scripts": {
+    "build": "babel src --out-dir dist",
+    "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/reinvanoyen/tnt-vec2.git"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
+    "brfs": "^1.4.3",
+    "browser-sync": "^2.18.8",
+    "browserify": "^14.1.0",
+    "del": "^2.2.2",
+    "expect.js": "^0.3.1",
+    "gulp": "^3.9.1",
+    "gulp-uglify": "^2.1.2",
+    "gutil": "^1.6.4",
+    "jquery": "^3.1.1",
+    "lodash.assign": "^4.2.0",
+    "mocha": "^3.5.0",
+    "pump": "^1.0.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.9.0"
   },
   "keywords": [
     "vec2",
